--- a/package.json
+++ b/package.json
@@ -4,15 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "env-cmd ./config/dev.env nodemon index.js",
+    "test": "env-cmd ./config/test.env jest --watchAll"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "hbs": "^4.0.4",
-    "request": "^2.88.0"
+    "mongodb": "^3.2.7",
+    "mongoose": "^5.6.0",
+    "request": "^2.88.0",
+    "validator": "^11.0.0"
+  },
+  "devDependencies": {
+    "env-cmd": "^8.0.2",
+    "jest": "^24.8.0",
+    "supertest": "^4.0.2"
   }
 }
